<resources>
    <string name="app_name">MadLevel4Task2</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="game_fragment_label">Game Fragment</string>
    <string name="history_fragment_label">History Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!-- Game Fragment -->
    <string name="tv_welcome">Welcome</string>
    <string name="tv_instructions">Instructions: select rock, paper or scissors to play.</string>
    <string name="tv_statistics_header">Your all time statistics</string>

    <string name="player_win">You win!</string>
    <string name="computer_win">Computer wins!</string>
    <string name="draw">Draw</string>

    <string name="vs">V.S.</string>

    <string name="you">You</string>
    <string name="computer">Computer</string>
    <string name="player">Player</string>
    <string name="make_move">Make a move</string>

    <string name="dev_date">datum hier</string>

    <string name="history">View history</string>
</resources>